# geonexus

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: build_country_network_3d.py  build_country_views.py  build_dashboard.py  build_multilayer_3d.py  build_multilayer_dashboard.py  build_narrative_dashboard.py  build_synthesis_dashboard.py  extract_cameo.py  extract_gdelt_baseline.py  extract_gdelt_strata.py  extract_maritime.py  extract_relations.py  extract_world_observer_narrative_history.py  extract_world_observer_sample.py  extract_world_observer_synthesis.py  hidden_links.py  iran_oil_gold.py  multilayer.py  narrative_evolution.py  narrative_llm_brief.py  network_evolution.py  relation_graph.py  relation_network.py  results_report.py  snapshot_network.py  synthesize_situation.py  verify_llm.py  world_observer_common.py  world_observer_demo.py  world_observer_map.py  world_observer_synthesis.py  world_observer_timeline_demo.py
examples/data/: cameo_2026-06-01.json  cameo_verification.json  flags_b64.json  gdelt_baseline.json  gdelt_strata.json  world_observer_cameo.json  world_observer_cameo_verified.json  world_observer_gdelt.json  world_observer_gdelt_strata.json  world_observer_maritime.json  world_observer_narrative_history.json  world_observer_relations.json  world_observer_sample.json  world_observer_situation.json  world_observer_synthesis.json  world_observer_timeline.json
reports/: hallucination_report.md  world_observer_evolution.md  world_observer_hidden_links.md  world_observer_llm_brief.md  world_observer_multilayer.md  world_observer_narrative_evolution.md  world_observer_relations.md  world_observer_results.md  world_observer_synthesis.md
tests/: conftest.py  test_analytics.py  test_causality.py  test_core.py  test_graph.py  test_memory.py  test_storage.py  test_visualization.py
(+46 files in other folders)
