[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eventgraph"
version = "0.1.0"
description = "A causal graph engine for geopolitical, economic and financial events."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sebastien Vicens" }]
keywords = ["graph", "causality", "events", "geopolitics", "finance", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5",
    "networkx>=3.1",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
viz = ["pyvis>=0.3.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/sebastienvicens/eventgraph"
Repository = "https://github.com/sebastienvicens/eventgraph"

[tool.hatch.build.targets.wheel]
packages = ["src/eventgraph"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["networkx.*", "pyvis.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=eventgraph --cov-report=term-missing"
